# SpikLLM

./: .gitignore  .gitmodules  README.md  pyproject.toml  requirements.txt
.superpowers/sdd/: task-1-report.md  task-2-report.md
bispikclm/: __init__.py
bispikclm/data/: __init__.py  fineweb.py
bispikclm/distill/: __init__.py  hooks.py  losses.py  spad.py
bispikclm/models/: __init__.py  bispik_attention.py  bispik_block.py  bispik_config.py  bispik_lm.py  bispik_mlp.py  bispik_model.py
bispikclm/train/: eval_lm.py  train_spad.py
configs/: bispikclm_opt125m_spad.toml  bispikclm_opt13b_spad.toml  bispikclm_opt350m_spad.toml
data/eval8-step3700-seed3700-7-2-1/: split_metadata.json  test.jsonl  validation.jsonl
data/gsm8k-seed20260708/: split_metadata.json  test.jsonl  validation.jsonl
docs/papers/: 2026-07-02-sa-topd-iclr-style-zh.md
docs/results/: 2026-06-30-loop-iteration-1.md  2026-06-30-loop-iteration-2.md  2026-06-30-opt125m-teacher-baseline.md  2026-06-30-student-oom-smoke.md  2026-07-01-loop-iteration-13.md  2026-07-01-loop-iteration-14.md  2026-07-01-loop-iteration-15.md  2026-07-01-loop-iteration-16.md  2026-07-01-loop-iteration-17.md  2026-07-01-loop-iteration-18.md  2026-07-01-loop-iteration-19.md  2026-07-01-loop-iteration-20.md  2026-07-01-loop-iteration-21.md  2026-07-01-loop-iteration-22.md  (+93 more)
review/: code_review.md
scripts/: analyze_wandb_probe.py  eval_bispik_checkpoint.py  eval_wikitext_ppl_checkpoint.py  monitor_wikitext_ppl_step2100.sh  prepare_gsm8k_teacher_baseline.py  queue_spad_resume_step2000.sh  run_infer.sh  run_sft.sh
(+32 files in other folders)
