[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "bispikclm"
version = "0.1.0"
description = "Bootstrap scaffold for BiSpikCLM experiments."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "huggingface_hub>=0.24",
]

[tool.setuptools.packages.find]
include = ["bispikclm*"]

