[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "bispikclm"
version = "0.1.0"
description = "BiSpikCLM prelaunch training utilities for spike-aware distillation experiments."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "huggingface_hub>=0.24",
  "spikingjelly>=0.0.0.0.14",
  "torch>=2.4",
  "transformers>=4.44",
]

[tool.setuptools.packages.find]
include = ["bispikclm*"]
